# python_cli_template_typer

./: .gitignore  README.md  pyproject.toml
python_cli_template_typer/: __main__.py  cli.py  utils.py
python_cli_template_typer/commands/: __init__.py  calc.py  greet.py
python_cli_template_typer/core/: mathops.py
tests/: test_calc.py
tests/cli/: test_greet.py
tests/unit/: test_mathops.py
